--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
         <form id="searchForm">
-          <input type="search" id="mySpotifySearch" type="text" placeholder="Search for Artist">
+          <input type="search" id="mySpotifySearch" type="text" placeholder="Search for Music">
           <button id="search" type="submit">Search</button>
         </form>
-        <div id="results" class="container" class="col-md-offset-4"></div>
+        <div id="results" class="container-fluid" class="col-lg-offset-4"></div>
       </div>
     </div>
   </div>
