--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <!-- custom script -->
   <script type="text/javascript" src="js/app.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Bhaijaan" rel="stylesheet">
 
 </head>
 <body>
@@ -26,6 +27,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
+        <br>
         <form class="search-form">
           <input type="search-input" placeholder="Search Here">
             <select name="type-search-query">
@@ -38,7 +40,10 @@
         </form>
       </div>
     </div>
+    <br>
+    <br>
     <div id="results"></div>
+
 
 </body>
 </html>
