--- a/index.html
+++ b/index.html
@@ -22,17 +22,21 @@
 
 </head>
 <body>
+<div class="jumbotron jumbotron-fluid">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
         <form id="searchForm">
           <input type="search" id="mySpotifySearch" type="text" placeholder="Search for Music">
-          <button id="search" type="submit">Search</button>
+          <br>
+          <br>
+          <button id="search" type="button" type="submit" class="btn btn-block btn-success">Search</button>
         </form>
         <div id="results" class="container-fluid" class="col-lg-offset-4"></div>
       </div>
     </div>
   </div>
+</div>
 </body>
 </html>
