--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
   <!-- custom styles -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
-
   <!-- jquery -->
   <!-- Note: using subresource integrity; see: https://en.wikipedia.org/wiki/Subresource_Integrity -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
@@ -22,13 +21,28 @@
 
 </head>
 <body>
-  <div class="container">
+  <div class="container center">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h1 class="text-center">Spotify Search</h1>
-        <div id="results"></div>
-      </div>
+      <div class="col-md-12">
+        <h1>Spotify Search</h1>
+        </div>
+
+       <form id="search-form">
+       <div class="col-md-12">
+        <input id="search-field" type="text" placeholder="Enter Your Search" />
+          </div>
+          <div class="col-md-12">
+        <button id="search-button" type="submit">Search</button>
+        </div>
+      </form>
     </div>
-  </div>
+</div>
+<hr>
+
+<div id="results">
+
+
+</div>
+
 </body>
 </html>
