--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Note: using subresource integrity; see: https://en.wikipedia.org/wiki/Subresource_Integrity -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <!-- custom script -->
-  <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="js/app3.js"></script>
 
 </head>
 <body>
