--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
+        <br>
+        <form class="search-form">
+          <input type="search-input" placeholder="Search Here">
+            <select name="type-search-query">
+              <option value="track">Track</option>
+              <option value="artist" disabled>Artist</option>
+              <option value="album" disabled>Album</option>
+              <option value="playlist" disabled>Playlist</option>
+            </select>
+            <button class="submit" type="submit">Submit</button>
+        </form>
         <div id="results"></div>
       </div>
     </div>
