changed to track instead of album

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <form class="search-form col-md-8 col-md-offset-2">
           <input class="search-bar">
           <select class="select-type">
+            <option value = "track">Track</option>
             <option value = "album">Album</option>
             <option value = "artist">Artist</option>
             <option value = "playlist">Playlist</option>
-            <option value = "track">track</option>
           </select>
-          <input type="submit" value="Submit">
+          <input class="submit" type="button" value="Submit">
         </form>
       </div>
     </div>
