finished Spotify project

--- a/index.html
+++ b/index.html
@@ -20,15 +20,23 @@
   <!-- custom script -->
   <script type="text/javascript" src="js/app.js"></script>
 
+
 </head>
 <body>
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
+        <form class="input-form">
+          <input class="user-input" placeholder="Search for a song"></input>
+          <button class="start-search" type="submit">Search Spotify</button>
+        </form>
+
         <div id="results"></div>
+
       </div>
     </div>
   </div>
+
 </body>
 </html>
