Removes previous search results

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Note: using subresource integrity; see: https://en.wikipedia.org/wiki/Subresource_Integrity -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <!-- custom script -->
-  <script type="text/javascript" src="js/app3.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
 
 </head>
 <body>
@@ -31,7 +31,7 @@
           <input type=submit>
           <div class="results">
             <div id="results"></div>
-            <div id="artistImage"></div>
+            <!-- <div id="artistImage"></div> -->
         </div>
         <!-- <button class="preview" id="play">Preview</button> -->
       </form>
