--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
             <button type="submit" name="subSearch" class="butt btn-success btn-lg btn-primary round">Search</button>
           </form>
         </div>
-        <div class="resTitleDiv">
-          <h2 id="resTitle" class="text-center">Top 20</h2>
-          <hr>
-        </div>
+        <!-- <div class="resTitleDiv">
+          <h2 id="resTitle" class="text-center">Results</h2>
+        </div> -->
         <div id="results" class="container">
         </div>
       </div>
