added album option, playlist and artist may be done at a later time, added no search found message

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           <select class="select-type">
             <option value = "track">Track</option>
             <option value = "album">Album</option>
-            <option value = "artist">Artist</option>
-            <option value = "playlist">Playlist</option>
+            <!--<option value = "artist">Artist</option>-->
+            <!--<option value = "playlist">Playlist</option>-->
           </select>
           <input class="submit" type="button" value="Submit">
         </form>
