--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             <div class="form-group row">
               <input type="search" id="qName" class="form-input" name="q" placeholder="Search Spotify..." value="">
             </div>
-            <div class="form-group row">
+            <!-- <div class="form-group row">
               <label for="qType"> What are you searching for? </label>
               <label class="radio-inline"><input type="radio" name="type" value="track" class="qType">A Song</label>
               <label class="radio-inline"><input type="radio" name="type" value="album" class="qType">An Album</label>
               <label class="radio-inline"><input type="radio" name="type" value="artist" class="qType">An Artist</label>
-            </div>
+            </div> -->
             <button type="submit" name="subSearch" class="butt btn-success btn-lg btn-primary round">Search</button>
           </form>
         </div>
