--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Spotify Search</h1>
+        Enter an artist:
+        <input type="text" id="searchbox" />
+        <button>Search</button>
         <div id="results"></div>
       </div>
     </div>
