--- a/index.html
+++ b/index.html
@@ -25,10 +25,25 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h1 class="text-center">Spotify Search</h1>
+        <h1 class="text-center">Tv Shows Search</h1>
+        <br>
+        <form id="search">
+          <div class="form-group">
+            <input class="form-control" id="input_id" name="q" placeholder="Search by People Category" autofocus>
+            <!-- <input type="hidden" name="user-key" value="66e156bc4d9c343462578d75ba3bcc58"> -->
+          </div>
+          <div class="form-group">
+            <input type="submit" id="search_btn" class="btn btn-block btn-success" value="Search">
+          </div>
+        </form>
+        <!-- <div class="text-center" id="loading">
+          <img src="images/loading.gif" width="80">
+        </div> -->
+        <br>
         <div id="results"></div>
       </div>
     </div>
   </div>
 </body>
+
 </html>
