--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
         <br>
         <form id="search">
           <div class="form-group">
-            <input class="form-control" id="input_id" name="q" placeholder="Search by People Category" autofocus>
-            <!-- <input type="hidden" name="user-key" value="66e156bc4d9c343462578d75ba3bcc58"> -->
+                  <input class="form-control" id="input_id1" name="q" placeholder="Search by Actors Name" autofocus>
+            <p> Or </p>
+
+              <input class="form-control" id="input_id2" name="q" placeholder="Search by Show Name" autofocus>
+
           </div>
           <div class="form-group">
             <input type="submit" id="search_btn" class="btn btn-block btn-success" value="Search">
           </div>
         </form>
-        <!-- <div class="text-center" id="loading">
-          <img src="images/loading.gif" width="80">
-        </div> -->
         <br>
         <div id="results"></div>
       </div>
